--- a/templates/base.html
+++ b/templates/base.html
@@ -137,14 +137,14 @@
 
             <td class="wp30 valign-top">
 
-                <& /www/comps/block_material_votes.msn &>
-                <% spacer(w=>1,h=>14) %>
+                {% include 'incl/block_material_votes.html' %}
+                <div style="width:1px; height:14px"><!-- --></div>
 
-                <& block_video.msn &>
-                <% spacer(w=>1,h=>14) %>
+                {% include 'incl/block_video.html' %}
+                <div style="width:1px; height:14px"><!-- --></div>
 
-                <& block_news.msn &>
-                <% spacer(w=>1,h=>14) %>
+                {% include 'incl/block_news.html' %}
+                <div style="width:1px; height:14px"><!-- --></div>
 
                 {% if request.path != '/' %}
                     <table class="wp100">
@@ -156,37 +156,25 @@
                     </table>
                 {% endif %}
 
-                <& block_notice.msn &>
-                <% spacer(w=>1,h=>14) %>
+                {% include 'incl/block_notice.html' %}
+                <div style="width:1px; height:14px"><!-- --></div>
 
-                <& search.msn &>
-                <% spacer(w=>1,h=>7) %>
+                {% include 'incl/search.html' %}
+                <div style="width:1px; height:7px"><!-- --></div>
 
-                <& add_news.msn &>
-                <% spacer(w=>1,h=>14) %>
+                {% include 'incl/add_news.html' %}
+                <div style="width:1px; height:14px"><!-- --></div>
 
+                {% include 'incl/block_bloggers.html' %}
+                <div style="width:1px; height:14px"><!-- --></div>
 
-                <& block_bloggers.msn &>
-                <% spacer(w=>1,h=>14) %>
-
-
-                <& block_author.msn &>
-                <% spacer(w=>1,h=>14) %>
+                {% include 'incl/block_author.html' %}
+                <div style="width:1px; height:14px"><!-- --></div>
 
                 {% if request.path == '/' %}
                     <iframe src="http://worldcrisis.ru/crisis/crisis/wc_club_foummsk_t" width="100%" frameborder="0" height="200" scrolling="no"></iframe>
                 {% endif %}
-
-                <& block_banner_right.msn &>
-                <% spacer(w=>1,h=>14) %>
-
-                <% spacer(w=>1,h=>14) %>
-                <& banner/bottom_right100.msn &>
-
-                <div class="sape">
-                    <!--# block name="adv" -->&nbsp;<!--# endblock -->
-                    <!--# include virtual="/sape/" stub="adv" -->
-                </div>
+                <div style="width:1px; height:14px"><!-- --></div>
 
             </td>
 
@@ -200,7 +188,7 @@
 
 <div style="width:1px; height:14px"><!-- --></div>
 
-<& block_banners_bottom.msn &>
+{% include 'incl/block_banners_bottom.html' %}
 
 <table class="full-table h21">
 	<tr>
@@ -209,12 +197,29 @@
         </td>
 		<td class="footer">
             <div class="p_l">
-                <div class="wh_normal">&copy; 1998-2016 <!--noindex--><a href="/">ФОРУМ.мск</a> (наши зеркала: <a href="http://forum-msk.org">forum-msk.org</a> <a rel="nofollow" href="http://forum-msk.com.ua">forum-msk.com.ua</a> <a rel="nofollow"  href="http://forummsk.info">forummsk.info</a>)<!--/noindex--></div>
+                <div class="wh_normal">&copy; 1998-2016
+                    <!--noindex-->
+                    <a href="/">ФОРУМ.мск</a>
+                    (наши зеркала: <a href="http://forum-msk.org">forum-msk.org</a>
+                    <a rel="nofollow" href="http://forum-msk.com.ua">forum-msk.com.ua</a>
+                    <a rel="nofollow"  href="http://forummsk.info">forummsk.info</a>)
+                    <!--/noindex-->
+                </div>
             </div>
 		</td>
 		<td class="align-right footer">
             <div class="p_l">
-                <div class="wh_normal"><a href="/about/">о нас</a> | <a href="/i/banner/bun_88x31_1.gif">наша кнопка</a> | <a href="/advert/">реклама на сайте</a> | <!--noindex--><a rel="nofollow" href="http://spreadsheets.google.com/viewform?formkey=dHprVFlvQ0tMbjVscVRvMGM5Z1BmTnc6MQ"><span style="color:red">связаться с нами</span></a> | email: forum-msk@yandex.ru<!--/noindex--></div>
+                <div class="wh_normal">
+                    <a href="/about/">о нас</a> |
+                    <a href="{% static 'i/banner/bun2_88x31_1.gif' %}">наша кнопка</a> |
+                    <a href="/advert/">реклама на сайте</a> |
+                    <!--noindex-->
+                    <a rel="nofollow" href="http://spreadsheets.google.com/viewform?formkey=dHprVFlvQ0tMbjVscVRvMGM5Z1BmTnc6MQ">
+                        <span style="color:red">связаться с нами</span>
+                    </a> |
+                    email: forum-msk@yandex.ru
+                    <!--/noindex-->
+                </div>
             </div>
 		</td>
 		<td class="w25 footer">
@@ -223,57 +228,28 @@
 	</tr>
 </table>
 
-<& block_text_banners3.msn &>
+{% if text_banner %}
+    <table class="wp100">
+        <tr>
+            <td class="wp100 valign-top align-center normal">
+                <div class="txtbanner">{{ text_banner }}</div>
+            </td>
+        </tr>
+    </table>
+{% endif %}
 
-<& count.msn &>
+{% include 'incl/count.html' %}
 
-%	if ($r->uri ne "/index.html") {
-		<& ../import/partner_redtram2.msn &>
-%	}
+{% include 'incl/ga.html' %}
+{% include 'incl/ya_metrika.html' %}
 
-<script type="text/javascript">
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-1566987-1']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-</script>
-
-<!-- Yandex.Metrika counter --><script type="text/javascript">(function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter17515558 = new Ya.Metrika({id:17515558, enableAll: true}); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = (d.location.protocol == "https:" ? "https:" : "http:") + "//mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f); } else { f(); } })(document, window, "yandex_metrika_callbacks");</script><noscript><div><img src="//mc.yandex.ru/watch/17515558" style="position:absolute; left:-9999px;" alt="" /></div></noscript><!-- /Yandex.Metrika counter -->
-% if ($ARGS{share}) {
+{% if share %}
     <script type="text/javascript" src="//yastatic.net/share/share.js" charset="utf-8"></script>
-% }
+{% endif %}
 
-% if ($r->uri ne '/index.html') {
-        <script type="text/javascript">
-        (function(w, d, n, s, t) {
-            w[n] = w[n] || [];
-            w[n].push(function() {
-                Ya.Context.AdvManager.render({
-                    blockId: "R-59310-1",
-                    renderTo: "yandex_ad_R-59310-1",
-                    async: true
-                });
-            });
-            t = d.getElementsByTagName("script")[0];
-            s = d.createElement("script");
-            s.type = "text/javascript";
-            s.src = "//an.yandex.ru/system/context.js";
-            s.async = true;
-            t.parentNode.insertBefore(s, t);
-        })(this, this.document, "yandexContextAsyncCallbacks");
-        </script>
-% }
+{% if request.path != '/' %}
+    {% include 'incl/ya_context.html' %}
+{% endif %}
+
 </body>
 </html>
-<%init>
-    return if $m->cache_self(expire_in => '60', expire_if => sub { $ARGS{expire} },
-        key => 'footer.msn|'.
-            ($r->uri =~ /material/ ? 'material' : '' ) .
-            ($r->uri ne "/index.html" ? '' : 'index') .
-            ( $request->{no_right_column} ? 'no_right_column' : '' ) );
-</%init>
