--- a/templates/incl/block_rating.html
+++ b/templates/incl/block_rating.html
@@ -18,7 +18,7 @@
                     </span>
                 </div>
 				<div class="normal align-left">
-                    {% if news %}
+                    {% if news_list %}
                         <ul>
                             {% for news in news_list %}
                                 <li>
