begin section view

--- a/templates/articles/index.html
+++ b/templates/articles/index.html
@@ -1,1 +1,88 @@
 {% extends 'base.html' %}
+
+{% load static %}
+
+{% block content %}
+<td class="wp{% if no_right_column %}100{% else %}70{% endif %} valign-top">
+
+    <table class="full-table">
+        <tr>
+            <td>
+                <div class="big1 or">Главная новость</div>
+                <div style="width:1px; height:1px"><!-- --></div>
+            </td>
+            <td>&nbsp;</td>
+            <td>
+                <div class="big1 or">Материал дня</div>
+                <div style="width:1px; height:1px"><!-- --></div>
+            </td>
+        </tr>
+        <tr>
+            {% include 'incl/article_block.html' with article=main_news color='bgFFF0E6' %}
+            <td class="w7">
+                <div style="width:7px; height:1px"><!-- --></div>
+            </td>
+            {% include 'incl/article_block.html' with article=main_material color='bgFFF0E6' %}
+        </tr>
+    </table>
+
+    <div style="margin-top: 5px;" class="normal align-center">
+        {% include 'incl/ya_direct.html' %}
+    </div>
+
+    <div style="width:1px; height:7px"><!-- --></div>
+
+    <table class="full-table">
+        <tr>
+            <td class="valign-top wp50">
+                {% include 'incl/block_part_main.html' with section=materials.politic %}
+                <div style="width:1px; height:7px"><!-- --></div>
+            </td>
+            <td class="w7">
+                <div style="width:7px; height:1px"><!-- --></div>
+            </td>
+            <td class="valign-top wp50">
+                {% include 'incl/block_part_main.html' with section=materials.moscow %}
+                <div style="width:1px; height:7px"><!-- --></div>
+            </td>
+        </tr>
+    </table>
+
+    <table class="full-table">
+        <tr>
+            <td class="valign-top wp50">
+                {% include 'incl/block_part_main.html' with section=materials.economic %}
+                <div style="width:1px; height:7px"><!-- --></div>
+                {% include 'incl/block_part_main.html' with section=materials.region %}
+                <div style="width:1px; height:7px"><!-- --></div>
+                {% include 'incl/block_part_main.html' with section=materials.society %}
+                <div style="width:1px; height:7px"><!-- --></div>
+            </td>
+            <td class="w7">
+                <div style="width:7px; height:1px"><!-- --></div>
+            </td>
+            <td class="valign-top wp50">
+                {% include 'incl/block_part_main.html' with section=materials.power %}
+                <div style="width:1px; height:7px"><!-- --></div>
+                {% include 'incl/block_part_main.html' with section=materials.fpolitic %}
+                <div style="width:1px; height:7px"><!-- --></div>
+                {% include 'incl/block_part_main.html' with section=materials.kompromat %}
+                <div style="width:1px; height:7px"><!-- --></div>
+            </td>
+        </tr>
+    </table>
+
+    <div class="align-center">
+        <a href="/stalin/">
+            <img src="{% static 'i/banner/bun_center1.gif' %}" width=234 height=60 alt="Сталин">
+        </a>&nbsp;
+        <a href="/vernost_leninu/">
+            <img src="{% static 'i/banner/bun_center2.gif' %}" width=234 height=60 alt="Ленин">
+        </a>&nbsp;
+        <a rel="nofollow" href="http://www.putinavotstavku.org/" target="_blank">
+            <img src="http://www.putinavotstavku.org/images/informer.gif" width="220" height="58" alt="Путин должен уйти" title="Путин должен уйти">
+        </a>
+    </div>
+
+</td>
+{% endblock %}
