--- a/templates/incl/block_news.html
+++ b/templates/incl/block_news.html
@@ -24,7 +24,7 @@
         <td class="bg_blu_r">
             <div class="p_b">
                 <div class="normal">
-                    {% for article in news_articles %}
+                    {% for article in sidebar_news %}
                         {% include 'incl/article_block_short.html' %}
                     {% endfor %}
                 </div>
