--- a/templates/incl/block_video.html
+++ b/templates/incl/block_video.html
@@ -26,7 +26,7 @@
                 <div class="normal">
                     <table class="wp100">
                         <tr>
-                            {% for article in video_articles %}
+                            {% for article in sidebar_videos %}
                                 <td class="valign-top wp50">
                                     <table class="wp100">
                                         <tr>
