--- a/templates/incl/header_bottom.html
+++ b/templates/incl/header_bottom.html
@@ -2,13 +2,20 @@
 
 <table class="full-table">
 	<tr>
-		<td class="w25"><div style="width:25px; height:1px"><!-- --></div></td>
+		<td class="w25">
+            <div style="width:25px; height:1px"><!-- --></div>
+        </td>
 		<td class="wp40">
-		<a href="/"><img src="{% static 'i/logo.gif' %}" width="218" height="44" alt="" ></a><br>
-		<div class="p_hv">
-		<div class="bl_normal"><span class="or3_normal">Кто владеет информацией,<br>владеет миром</span></div>
-        </div>
-		</td>
+            <a href="/">
+                <img src="{% static 'i/logo.gif' %}" width="218" height="44" alt="" >
+            </a>
+            <br>
+            <div class="p_hv">
+                <div class="bl_normal">
+                    <span class="or3_normal">Кто владеет информацией,<br>владеет миром</span>
+                </div>
+            </div>
+        </td>
 		<td class="wp60 align-right valign-top">
             <!--div style="padding-bottom:3px;"><div class="normal">
                 <strong>Вы можете оказать помощь ФОРУМу.мск здесь: WMR R127966713532 , YaD 41001845584610</strong>
@@ -16,32 +23,48 @@
         {% include 'incl/block_rating.html' %}
 
 		</td>
-		<td class="w25"><div style="width:25px; height:1px"><!-- --></div></td>
+		<td class="w25">
+            <div style="width:25px; height:1px"><!-- --></div>
+        </td>
 	</tr>
 </table>
+
 <div style="width:7px; height:1px"><!-- --></div>
 
 <div class="align-right"><table class="h21 menu full-table">
 	<tr>
-
-		<td class="clear2 wp85">{% include 'incl/marquee.html' %}</td>
-		<TH>
-		<DIV class=p_h2><!--noindex--><A href="http://forummsk.info/">English</A><!--/noindex--></DIV>
-        </TH>
-		<TD class="clear w2">&nbsp;</TD>
-		<TH>
-		<DIV class=p_h2><A href="/opposition_hoop/">Кольцо&nbsp;оппозиции</A></DIV>
-        </TH>
-		<TD class="clear w2">&nbsp;</TD>
-		<th><div class="p_h2"><a href="/dialog/">Форум</a></div></th>
-		<td class="w25 clear"><div style="width:25px; height:1px"><!-- --></div></td>
+		<td class="clear2 wp85">
+            {% include 'incl/marquee.html' with article=marquee %}
+        </td>
+        <th>
+            <div class=p_h2>
+                <!--noindex-->
+                <a href="http://forummsk.info/">English</a>
+                <!--/noindex-->
+            </div>
+        </th>
+		<td class="clear w2">&nbsp;</td>
+        <th>
+            <div class=p_h2>
+                <a href="/opposition_hoop/">Кольцо&nbsp;оппозиции</a>
+            </div>
+        </th>
+		<td class="clear w2">&nbsp;</td>
+		<th>
+            <div class="p_h2">
+                <a href="/dialog/">Форум</a>
+            </div>
+        </th>
+		<td class="w25 clear">
+            <div style="width:25px; height:1px"><!-- --></div>
+        </td>
 	</tr>
 </table></div>
 
 <table class="full-table menu h35">
 	<tr>
 		<td class="w25"><div style="width:25px; height:1px"><!-- --></div></td>
-        {% if active_section %} {# current section name #}
+        {% if active_section %} {# current section #}
             <td class="align-center">
                 <div class="p_h">
                     <a href="/">Главная</a>
@@ -56,7 +79,7 @@
         {% endif %}
 
         {% for section in sections %}
-            {% if active_section and active_section == section.slug %}
+            {% if active_section and active_section == section %}
                 <th>
                     <div class="p_h">
                         <a href="{% url 'articles:section' section.slug %}">{{ section.name }}</a>
@@ -73,6 +96,8 @@
                 </td>
             {% endif %}
         {% endfor %}
-		<td class="w25"><div style="width:25px; height:1px"><!-- --></div></td>
+		<td class="w25">
+            <div style="width:25px; height:1px"><!-- --></div>
+        </td>
 	</tr>
 </table>
