--- a/templates/incl/marquee.html
+++ b/templates/incl/marquee.html
@@ -1,9 +1,7 @@
 <div id='marquee'>
     <div class="p_r" style="display:none">
-        {% if marquee %}
-            <a href="{% url 'articles:detail' marquee.section.slug marquee.id %}">{{ marquee.title }}</a>
-        {% else %}
-            <a href="/">&nbsp;</a>
+        {% if article %}
+            <a href="{% url 'articles:detail' article.section.slug article.id %}">{{ article.title }}</a>
         {% endif %}
     </div>
 </div>
